ApplePaySession should never prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203087 <rdar://problem/56744401>

Reviewed by Chris Dumez.

Source/WebCore:

Rather than prevent entering the back/forward cache when there is an active session, abort
the session on suspension and queue a task to the event loop that dispatches the cancel event.

Tests: http/tests/ssl/applepay/page-cache-active-apple-pay-session.html
       http/tests/ssl/applepay/page-cache-inactive-apple-pay-session.html

* Modules/applepay/ApplePaySession.cpp:
(WebCore::ApplePaySession::canSuspendWithoutCanceling const):
(WebCore::ApplePaySession::suspend):
(WebCore::ApplePaySession::shouldPreventEnteringBackForwardCache_DEPRECATED const): Deleted.
* Modules/applepay/ApplePaySession.h:

LayoutTests:

* http/tests/ssl/applepay/page-cache-active-apple-pay-session-expected.txt: Added.
* http/tests/ssl/applepay/page-cache-active-apple-pay-session.html: Added.
* http/tests/ssl/applepay/page-cache-inactive-apple-pay-session-expected.txt: Added.
* http/tests/ssl/applepay/page-cache-inactive-apple-pay-session.html: Added.


Canonical link: https://commits.webkit.org/217211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252057 268f45cc-cd09-0410-ab3c-d52691b4dbfc