Source/WebCore/Modules/applepay/ApplePaySession.cpp
@@ -823,14 +823,14 @@ const char* ApplePaySession::activeDOMObjectName() const
     return "ApplePaySession";
 }
 
-bool ApplePaySession::shouldPreventEnteringBackForwardCache_DEPRECATED() const
+bool ApplePaySession::canSuspendWithoutCanceling() const
 {
     switch (m_state) {
     case State::Idle:
     case State::Aborted:
     case State::Completed:
     case State::Canceled:
-        return false;
+        return true;
 
     case State::Active:
     case State::Authorized:
@@ -838,8 +838,7 @@ bool ApplePaySession::shouldPreventEnteringBackForwardCache_DEPRECATED() const
     case State::ShippingContactSelected:
     case State::PaymentMethodSelected:
     case State::CancelRequested:
-        // FIXME: This should never prevent entering the back/forward cache.
-        return true;
+        return false;
     }
 }
 
@@ -850,6 +849,21 @@ void ApplePaySession::stop()
 
     m_state = State::Aborted;
     paymentCoordinator().abortPaymentSession();
+
+    didReachFinalState();
+}
+
+void ApplePaySession::suspend(ReasonForSuspension reason)
+{
+    if (reason != ReasonForSuspension::BackForwardCache)
+        return;
+
+    if (canSuspendWithoutCanceling())
+        return;
+
+    m_state = State::Canceled;
+    paymentCoordinator().abortPaymentSession();
+    queueTaskToDispatchEvent(*this, TaskSource::UserInteraction, ApplePayCancelEvent::create(eventNames().cancelEvent, { }));
 
     didReachFinalState();
 }
